--- a/index.html
+++ b/index.html
@@ -1,67 +1,88 @@
+<!-- 
+	* Personal Cards 1.0 by Luca Cassani *
+	
+	You can copy, modify, publish, use, sell, 
+	or distribute this template for any purpose,
+	commercial or non-commercial, and by any means. 
+	It requires no special copyright notes nor attribution.
+-->
+
 <!DOCTYPE html>
-<html>
-
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Marcoscgdev.GitHub.io : My GitHub Website">
-
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Marcoscgdev.GitHub.io</title>
-  </head>
-
-  <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/marcoscgdev">View on GitHub</a>
-
-          <h1 id="project_title">Marcoscgdev.GitHub.io</h1>
-          <h2 id="project_tagline">My GitHub Website</h2>
-
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
-  </body>
+<html lang="en">
+<head>
+	<title>Marcos Calvo García</title>
+	<link href="css/style.css" rel="stylesheet" type="text/css">
+	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="css/font-awesome.min.css">
+	<meta name="description" content="Your meta-description here">
+	<meta name="author" content="Luca Cassani">
+	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
+	<meta name="theme-color" content="#2196F3">
+</head>
+<body>
+<div id="blue_bg"></div>
+<header>
+	<div id="quick_card" class="card">
+		<div><img id="photo" src="img/profile.jpg" /></div> <!-- replace photo in /img/ 705x705 -->
+		<h1 id="name"><b>Marcos</b> Calvo Garc&iacute;a</h1>
+		<h2 id="description">Android Developer</h2>
+	</div>
+</header>
+<main>
+<div id="about_card" class="card">
+	<section class="tab">
+		<div class="title"><i class="fa fa-graduation-cap"></i>Education</div>
+		<div class="content">
+			<section class="element">
+				<div class="name">Secondary School</div>
+				<div class="info">2008 - <b>2012</b></div>
+			</section>
+			<hr align="left"/>
+			<section class="element">
+				<div class="name">High School</div>
+				<div class="info">2012 - <b>2014</b></div>
+			</section>
+			<hr align="left"/>
+			<section class="element">
+				<div class="name">University</div>
+				<div class="info">2014 - <b>now</b></div>
+			</section>
+			<!-- You can add more education details! -->
+		</div>
+	</section>
+	<section class="tab">
+		<div class="title"><i class="fa fa-suitcase"></i>My Work</div>
+		<div class="content">
+			<section class="element"> 
+					<div class="name">FAB Scroll Animations Library</div>
+					<div class="info">A very simple library to animate the Support Library FAB on a RecyclerView scroll. See it <a href="https://github.com/marcoscgdev/FABScrollAnimations" target="_blank">here</a>.</div>
+			</section>
+			<!--<hr align="left"/>
+			<section class="element">
+				<div class="name">Your second work</div>
+				<div class="info">Description and <a href="http://yourlinkhere" target="_blank">link</a></div>
+			</section>-->
+			<!-- You can add more work details ! -->
+		</div>
+	</section>
+</div>
+<div id="contact_card" class="card">
+	<section class="tab">
+		<div class="title"><i class="fa fa-envelope"></i>Contact</div>
+		<div class="content">
+			<div class="contacts"><a href="mailto:info@marcoscg.com"><i class="fa fa-envelope"></i>&nbsp; E-Mail</a></div>
+			<div class="contacts"><a href="http://yourlinkhere" target="_blank"><i class="fa fa-google-plus"></i>&nbsp; Google+</a></div>
+			<div class="contacts"><a href="http://www.marcoscg.com" target="_blank"><i class="fa fa-globe"></i>&nbsp; Website</a></div>
+			<!-- You can add more contacts! -->
+		</div>
+	</section>
+</div>
+<a href="mailto:info@marcoscg.com">
+	<div id="fab">&nbsp;<i class="fa fa-envelope"></i>&nbsp;</div>
+</a>
+</main>
+<footer>
+  <small><a href="https://marcoscgdev.github.io" target="_blank">Marcos CG</a></small>
+</footer>
+</body>
 </html>
