--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Marcos Calvo García</title>
+	<title>Marcos Calvo Garc&iacute;a</title>
 	<link href="css/style.css" rel="stylesheet" type="text/css">
 	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/font-awesome.min.css">
