--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<title>Marcos Calvo Garc&iacute;a</title>
 	<link href="css/style.css" rel="stylesheet" type="text/css">
     <link href="css/ripple.min.css" rel="stylesheet" type="text/css">
-    <link href="http://jakiestfu.github.io/Ripple.js/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<meta name="description" content="Your meta-description here">
