--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 		</div>
 	</section>
 </div>
-<a href="javascript:void(0)">
+<a href="mailto:info@marcoscg.com">
 	<div id="fab" class="ripple-anim">&nbsp;<i class="fa fa-envelope"></i>&nbsp;</div>
 </a>
 </main>
