--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="title"><i class="fa fa-graduation-cap"></i>Education</div>
                 <div class="content">
                     <section class="element">
-                        <div class="name">University - Computer Engineering</div>
+                        <div class="name">University - Computer Engineering Grade</div>
                         <div class="info">2016 - <b>now</b></div>
                     </section>
                 </div>
