--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 <div class="title"><i class="fa fa-graduation-cap"></i>Education</div>
                 <div class="content">
                     <section class="element">
-                        <div class="name">University - Computer Engineering Grade</div>
-                        <div class="info">2016 - <b>now</b></div>
+                        <div class="name">University</div>
+                        <div class="info">Computer Engineering | 2016 - <b>now</b></div>
                     </section>
                 </div>
             </section>
