--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                     </section>
                     <hr class="hr" align="center" />
                     <section class="element">
+                        <center><a class="btn btn-defaults" style="color:#616161;" href="https://play.google.com/store/apps/dev?id=8305888560194311492" target="_blank"><i class="fa fa-android" style="font-size:1.2em;"></i>&nbsp; check out all my libraries</a></center>
                         <center><a class="btn btn-defaults" style="color:#616161;" href="https://play.google.com/store/apps/dev?id=8305888560194311492" target="_blank"><i class="fa fa-android" style="font-size:1.2em;"></i>&nbsp; check out all my apps</a></center>
                     </section>
                 </div>
