--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                     </section>
                     <hr class="hr" align="center" />
                     <section class="element">
-                        <small><a class="btn btn-defaults" style="color:#616161;" href="https://play.google.com/store/apps/dev?id=8305888560194311492" target="_blank"><i class="fa fa-book" style="font-size:1.2em;"></i>&nbsp; check out all my libraries</a></small>
-                        <small><a class="btn btn-defaults" style="color:#616161;" href="https://play.google.com/store/apps/dev?id=8305888560194311492" target="_blank"><i class="fa fa-android" style="font-size:1.2em;"></i>&nbsp; check out all my apps</a></small>
+                        <small><a class="btn btn-defaults" style="color:#616161;" href="https://play.google.com/store/apps/dev?id=8305888560194311492" target="_blank"><i class="fa fa-book" style="font-size:1.2em;"></i>&nbsp; all my libraries</a></small>
+                        <small><a class="btn btn-defaults" style="color:#616161;" href="https://play.google.com/store/apps/dev?id=8305888560194311492" target="_blank"><i class="fa fa-android" style="font-size:1.2em;"></i>&nbsp; all my apps</a></small>
                     </section>
                 </div>
             </section>
