--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                 <div class="title"><i class="fa fa-suitcase"></i>My Work</div>
                 <div class="content">
                     <section class="element">
-                        <div class="name"><small><b>LIBRARY</b></small> - FAB Scroll Animations</div>
-                        <div class="info">A very simple library to animate the Support Library FAB when the user scrolls. See it <a href="https://github.com/marcoscgdev/FABScrollAnimations" target="_blank">here</a>.</div>
+                        <div class="name"><small><b>LIBRARY</b></small> - Easy Permissions</div>
+                        <div class="info">Coming soon... See it <a href="https://github.com/marcoscgdev/EasyPermissions" target="_blank">here</a>.</div>
                     </section>
                     <hr class="hr" align="center" />
                     <section class="element">
