--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="content">
                     <section class="element">
                         <div class="name"><small><b>LIBRARY</b></small> - Easy Permissions</div>
-                        <div class="info">Coming soon... See it <a href="https://github.com/marcoscgdev/EasyPermissions" target="_blank">here</a>.</div>
+                        <div class="info">An extremely simple and lightweight android library that helps you with Android Runtime Permissions. See it <a href="https://github.com/marcoscgdev/EasyPermissions" target="_blank">here</a>.</div>
                     </section>
                     <hr class="hr" align="center" />
                     <section class="element">
