--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link href="css/ripple.min.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/font-awesome.min.css">
-    <meta name="description" content="Your meta-description here">
-    <meta name="author" content="Luca Cassani">
+    <meta name="description" content="Android Developer">
+    <meta name="author" content="Marcos CG">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
     <meta name="theme-color" content="#3F51B5">
 </head>
@@ -46,7 +46,7 @@
                     </section>
                     <hr class="hr" align="center" />
                     <section class="element">
-                        <small><a class="btn btn-defaults" style="color:#616161;" href="https://play.google.com/store/apps/dev?id=8305888560194311492" target="_blank"><i class="fa fa-book" style="font-size:1.1em;"></i>&nbsp; all my libraries</a></small>
+                        <small><a class="btn btn-defaults" style="color:#616161;" href="http://android-arsenal.com/user/marcoscgdev" target="_blank"><i class="fa fa-book" style="font-size:1.1em;"></i>&nbsp; all my libraries</a></small>
                         <small><a class="btn btn-defaults" style="color:#616161;" href="https://play.google.com/store/apps/dev?id=8305888560194311492" target="_blank"><i class="fa fa-android" style="font-size:1.1em;"></i>&nbsp; all my apps</a></small>
                     </section>
                 </div>
