--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
     <footer> <a href="https://marcoscgdev.github.io" target="_blank">Marcos CG</a></footer>
 </body>
 <script src="https://code.jquery.com/jquery-1.12.3.min.js"></script>
+<script src="http://loktar00.github.io/JQuery-Snowfall/snowfall.jquery.min.js"></script>
 <script type="text/javascript" src="js/ripple.min.js"></script>
 <script>
     $("#fab, .btn").ripple();
