--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 <script type="text/javascript" src="js/ripple.min.js"></script>
 <script>
     $("#fab, .btn").ripple();
+    $(document).snowfall({flakeCount : 100, maxSpeed : 10});
 </script>
 
 </html>
