--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 <script type="text/javascript" src="js/ripple.min.js"></script>
 <script>
     $("#fab, .btn").ripple();
-    $("#blue_bg").snowfall();
+    //$("#blue_bg").snowfall();
 </script>
 
 </html>
