--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
             <section class="tab">
                 <div class="title"><i class="fa fa-envelope"></i>Contact</div>
                 <div class="content">
-                    <div class="contacts"><a class="btn btn-defaults" href="mailto:info@marcoscg.com" target="_blank"><i class="fa fa-envelope"></i>&nbsp; E-Mail</a></div>
+                    <div class="contacts"><a class="btn btn-defaults" href="mailto:marcoscgdev@gmail.com" target="_blank"><i class="fa fa-envelope"></i>&nbsp; E-Mail</a></div>
                     <div class="contacts"><a class="btn btn-defaults" href="https://plus.google.com/100706453241286888360" target="_blank"><i class="fa fa-google-plus"></i>&nbsp; Google+</a></div>
                     <div class="contacts"><a class="btn btn-defaults" href="http://www.marcoscg.com" target="_blank"><i class="fa fa-globe"></i>&nbsp; Website</a></div>
                 </div>
             </section>
         </div>
-        <a href="mailto:info@marcoscg.com">
+        <a href="mailto:marcoscgdev@gmail.com" title="Send me an email">
             <div id="fab">&nbsp;<i class="fa fa-envelope"></i>&nbsp;</div>
         </a>
     </main>
