--- a/index.html
+++ b/index.html
@@ -1,56 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
-        <title>Marcos CG</title>
-        <meta name="description" content="Contact with Marcos CG.">
-        <meta name="author" content="Marcos CG">
-        <meta name="keywords" content="web development, web, development, android development, android, android studio, eclipse, java, desarrollo web, desarrollo, desarrollo android, front-end, back-end, frontend, backend, front end, back end, diseño gráfico, diseño, grafico, gráfico, graphic, design, graphic design">
-        <link rel="stylesheet" href="assets/css/styles.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    </head>
-    <body>
-        <div class="background z-depth-1 orange darken-2">&nbsp;</div>
-        <div class="fixed-action-btn tooltipped" style="z-index:99999;" data-position="left" data-delay="50" data-tooltip="Download as PDF"><a class="btn-floating btn-large waves-effect waves-light orange darken-2" style="z-index:99999;" href="Marcos_CG.pdf" target="_blank"><i class="material-icons">file_download</i></a></div>
-        <div class="container z-depth-2 row">
-            <div class="col s12 m3" style="position:relative;">
-                <center><img class="responsive-img circle avatar z-depth-2" src="http://marcoscgdev.github.io/img/profile.jpg"></center>
-                <p class="center-align title">I'm <span>Marcos CG</span></p>
-                <p class="center-align description">&nbsp;and I'm a Software Developer.</p>
-            </div>
-            <div class="col s12 m9">
-                <h5 class="skills">SKILLS</h5>
-                <div>
-                    <p style="margin:0;margin-bottom:4px;margin-top:24px;">Front-End Development <span style="float:right;">90%</span></p>
-                    <div class="progress grey lighten-3" style="margin-top:0;"><div class="determinate orange darken-2" style="width: 90%"></div></div>
-                </div>
-                <div>
-                    <p style="margin:0;margin-bottom:4px;margin-top:16px;">Back-End Development <span style="float:right;">60%</span></p>
-                    <div class="progress grey lighten-3" style="margin-top:0;"><div class="determinate orange darken-2" style="width: 60%"></div></div>
-                </div>
-                <div>
-                    <p style="margin:0;margin-bottom:4px;margin-top:20px;">Android App Development <span style="float:right;">80%</span></p>
-                    <div class="progress grey lighten-3" style="margin-top:0;"><div class="determinate orange darken-2" style="width: 80%"></div></div>
-                </div>
-                <div style="margin-bottom:40px;">
-                    <p style="margin:0;margin-bottom:4px;margin-top:20px;">Graphic Design <span style="float:right;">85%</span></p>
-                    <div class="progress grey lighten-3" style="margin-top:0;"><div class="determinate orange darken-2" style="width: 85%"></div></div>
-                </div>
-                <div class="social-icons col s12 pd-0 blue-grey z-depth-0" style="padding:0;">
-                    <a style="padding-top:20px;padding-bottom:20px;" class="center-align waves-effect waves-light col s4 m2 pd-0" href="https://www.facebook.com/MarcosCGdev" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                    <a style="padding-top:20px;padding-bottom:20px;" class="center-align waves-effect waves-light col s4 m2 pd-0" href="https://twitter.com/MarcosCGdev" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                    <a style="padding-top:20px;padding-bottom:20px;" class="center-align waves-effect waves-light col s4 m2 pd-0" href="https://plus.google.com/100706453241286888360" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
-                    <a style="padding-top:20px;padding-bottom:20px;" class="center-align waves-effect waves-light col s4 m2 pd-0" href="https://github.com/marcoscgdev" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
-                    <a style="padding-top:20px;padding-bottom:20px;" class="center-align waves-effect waves-light col s4 m2 pd-0" href="https://www.linkedin.com/in/marcoscg" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                    <a style="padding-top:20px;padding-bottom:20px;" class="center-align waves-effect waves-light col s4 m2 pd-0" href="mailto:marcoscgdev@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
-				</div>
-            </div>
-        </div>
-        <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
-        <script>document.oncontextmenu = function(){return false}</script>
-    </body>
-</html>
+<!-- Thanks for watching my code. www.marcoscg.com --> <!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0"><title>Marcos CG</title><meta name="description" content="Contact with Marcos CG."><meta name="author" content="Marcos CG"><meta name="keywords" content="web development, web, development, android development, android, android studio, eclipse, java, desarrollo web, desarrollo, desarrollo android, front-end, back-end, frontend, backend, front end, back end, diseño gráfico, diseño, grafico, gráfico, graphic, design, graphic design"><link rel="stylesheet" href="assets/css/styles.css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css"><link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"><link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"></head><body><div class="background z-depth-1 orange darken-2">&nbsp;</div><div class="fixed-action-btn tooltipped" style="z-index:99999;" data-position="left" data-delay="50" data-tooltip="Download as PDF"><a class="btn-floating btn-large waves-effect waves-light orange darken-2" style="z-index:99999;" href="Marcos_CG.pdf" target="_blank"><i class="material-icons">file_download</i></a></div><div class="container z-depth-2 row"><div class="col s12 m3" style="position:relative;"><center><img class="responsive-img circle avatar z-depth-2" src="http://marcoscgdev.github.io/img/profile.jpg"></center><p class="center-align title">I'm <span>Marcos CG</span></p><p class="center-align description">&nbsp;and I'm a Software Developer.</p></div><div class="col s12 m9"><h5 class="skills">SKILLS</h5><div><p style="margin:0;margin-bottom:4px;margin-top:24px;">Front-End Development <span style="float:right;">90%</span></p><div class="progress grey lighten-3" style="margin-top:0;"><div class="determinate orange darken-2" style="width: 90%"></div></div></div><div><p style="margin:0;margin-bottom:4px;margin-top:16px;">Back-End Development <span style="float:right;">60%</span></p><div class="progress grey lighten-3" style="margin-top:0;"><div class="determinate orange darken-2" style="width: 60%"></div></div></div><div><p style="margin:0;margin-bottom:4px;margin-top:20px;">Android App Development <span style="float:right;">80%</span></p><div class="progress grey lighten-3" style="margin-top:0;"><div class="determinate orange darken-2" style="width: 80%"></div></div></div><div style="margin-bottom:40px;"><p style="margin:0;margin-bottom:4px;margin-top:20px;">Graphic Design <span style="float:right;">85%</span></p><div class="progress grey lighten-3" style="margin-top:0;"><div class="determinate orange darken-2" style="width: 85%"></div></div></div><div class="social-icons col s12 pd-0 blue-grey z-depth-0" style="padding:0;"> <a style="padding-top:20px;padding-bottom:20px;" class="center-align waves-effect waves-light col s4 m2 pd-0" href="https://www.facebook.com/MarcosCGdev" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a> <a style="padding-top:20px;padding-bottom:20px;" class="center-align waves-effect waves-light col s4 m2 pd-0" href="https://twitter.com/MarcosCGdev" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a> <a style="padding-top:20px;padding-bottom:20px;" class="center-align waves-effect waves-light col s4 m2 pd-0" href="https://plus.google.com/100706453241286888360" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a> <a style="padding-top:20px;padding-bottom:20px;" class="center-align waves-effect waves-light col s4 m2 pd-0" href="https://github.com/marcoscgdev" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a> <a style="padding-top:20px;padding-bottom:20px;" class="center-align waves-effect waves-light col s4 m2 pd-0" href="https://www.linkedin.com/in/marcoscg" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a> <a style="padding-top:20px;padding-bottom:20px;" class="center-align waves-effect waves-light col s4 m2 pd-0" href="mailto:marcoscgdev@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a></div></div></div> <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script> <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script> <script>document.oncontextmenu=function(){return false}</script> </body></html> <!-- Thanks for watching my code. www.marcoscg.com -->
