--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="valign-wrapper">
     <div class="background z-depth-1 orange darken-2">&nbsp;</div>
     <div class="fixed-action-btn tooltipped" style="z-index:99999;" data-position="left" data-delay="50" data-tooltip="Download as PDF"><a class="btn-floating btn-large waves-effect waves-light orange darken-2" style="z-index:99999;"><i class="material-icons">file_download</i></a></div>
-    <div class="container z-depth-2 row">
+    <div class="container z-depth-2 row valign">
         <div class="col s12 m3" style="position:relative;">
             <center><img class="responsive-img circle avatar z-depth-2" src="http://marcoscgdev.github.io/img/profile.jpg"></center>
             <p class="center-align title">I'm <span>Marcos CG</span></p>
