--- a/mozart/donde.html
+++ b/mozart/donde.html
@@ -58,7 +58,7 @@
 	z-index: 2;
 	left: 458px;
 	top: 6px;
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: #EAEAEA;
     border-radius: 10px;
 }
 body {
