--- a/mozart/donde.html
+++ b/mozart/donde.html
@@ -157,8 +157,8 @@ body {
 	width: 390px;
 	height: auto;
 	z-index: 2;
-	top: -3px;
-    background-color: rgba(255, 255, 255, 0.5);
+	top: 115px;
+    background-color: #EAEAEA;
     border-radius: 10px;
 }
 </style>
