--- a/assets/instrucciones_wise.html
+++ b/assets/instrucciones_wise.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <title>Instrucciones</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" rel="stylesheet" />
 </head>
 <body>
     <h1>Proximamente</h1>
