--- a/assets/instrucciones_wise.html
+++ b/assets/instrucciones_wise.html
@@ -6,7 +6,9 @@
     <title>Instrucciones</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" rel="stylesheet" />
 </head>
-<body>
-    <h1>Proximamente</h1>
+<body style="text-align:center;">
+    <h2>Instrucciones</h2>
+    <p>Para ver los canales correctamente es necesario pulsar sobre el siguiente icono:</p>
+    <img src="http://imag.malavida.com/mvimgbig/download-fs/wiseplay-16872-1.jpg" width="90%" />
 </body>
 </html>
