--- a/assets/instrucciones_wise.html
+++ b/assets/instrucciones_wise.html
@@ -9,6 +9,6 @@
 <body style="text-align:center;">
     <h2>Instrucciones</h2>
     <p>Para ver los canales correctamente es necesario pulsar sobre el siguiente icono:</p>
-    <img src="http://imag.malavida.com/mvimgbig/download-fs/wiseplay-16872-1.jpg" width="90%" />
+    <img src="https://raw.githubusercontent.com/marcoscgdev/marcoscgdev.github.io/master/assets/IMG_20170726_122943.jpg" width="90%" style="max-width:720px;" />
 </body>
 </html>
