--- a/assets/instrucciones_wise.html
+++ b/assets/instrucciones_wise.html
@@ -8,7 +8,7 @@
 </head>
 <body style="text-align:center;">
     <h2>Instrucciones</h2>
-    <p style="padding-left:5%;padding-right:5%;">Para ver los canales correctamente es necesario pulsar sobre el siguiente icono (cuando aparezca):</p>
+    <p style="padding-left:5%;padding-right:5%;">Para ver los canales correctamente, una vez abierto el canal es necesario pulsar sobre el siguiente icono (cuando aparezca):</p>
     <img src="https://raw.githubusercontent.com/marcoscgdev/marcoscgdev.github.io/master/assets/IMG_20170726_122943.jpg" width="90%" style="max-width:720px;" />
 </body>
 </html>
